Adjust some Schematics

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -189,10 +189,21 @@
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
-      "styleext": "scss"
+      "styleext": "scss",
+      "spec": false
+    },
+    "@ionic/angular-toolkit:directive": {
+      "spec": false
+    },
+    "@ionic/angular-toolkit:guard": {
+      "spec": false
     },
     "@ionic/angular-toolkit:page": {
-      "styleext": "scss"
+      "styleext": "scss",
+      "spec": false
+    },
+    "@ionic/angular-toolkit:service": {
+      "spec": false
     }
   }
 }
