--- a/.github/workflows/frontend--lint.yml
+++ b/.github/workflows/frontend--lint.yml
@@ -3,17 +3,20 @@ name: Lint the frontend
 on:
   push:
     paths:
+      - .github/workflows/**
       - frontend/**
   pull_request:
 
 jobs:
   lint:
     runs-on: ubuntu-latest
+
     defaults:
       run:
         working-directory: frontend
 
     steps:
+      - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
           node-version: '12.x'
