Small updates to the Github Workflow file

--- a/.github/workflows/frontend--lint.yml
+++ b/.github/workflows/frontend--lint.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '12.x'
-      - run: npm -v
-      - run: node -v
-      - run: npm install
-      - run: npm run all-checks
+      - name: Install all frontend dependencies
+        run: npm install
+      - name: Run all frontend checks
+        run: npm run all-checks
