--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,7 +54,7 @@
     "prettier": "^2.0.5",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tslint": "~6.1.2",
+    "tslint": "^6.1.2",
     "typescript": "~3.8.3"
   }
 }
