deleted the organization of the imports

--- a/frontend/.vscode/settings.json
+++ b/frontend/.vscode/settings.json
@@ -11,8 +11,7 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.formatOnSave": true,
     "editor.codeActionsOnSave": {
-      "source.organizeImports": true,
-      "source.fixAll": true
+      "source.fixAll": true,
     }
   }
 }
