--- a/.github/workflows/backend-gradle.yml
+++ b/.github/workflows/backend-gradle.yml
@@ -6,9 +6,10 @@ name: CI
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+      paths:
+      - .github/workflows/**
+      - Backend/** 
+  pull_request: 
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
