--- a/.github/workflows/backend-gradle.yml
+++ b/.github/workflows/backend-gradle.yml
@@ -24,6 +24,6 @@ jobs:
       with:
         java-version: 1.8
     - name: Grant execute permission for gradlew
-      run: chmod +x ./gradlew
+      run: chmod +x  Backend/gradle/
     - name: Build with Gradle
       run: ./gradlew build
