--- a/.github/workflows/backend-gradle.yml
+++ b/.github/workflows/backend-gradle.yml
@@ -26,4 +26,4 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x  Backend/gradle/
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./Backend/gradlew build
