--- a/.github/workflows/backend-gradle.yml
+++ b/.github/workflows/backend-gradle.yml
@@ -24,8 +24,8 @@ jobs:
       with:
         java-version: 1.8
     - name: Grant execute permission for gradlew
-      run: chmod +x  Backend/gradle/
-    - name: clean
+      run: chmod +x  ./Backend/gradlew
+    - name: Clean
       run: ./Backend/gradlew clean
     - name: Build with Gradle
       run: ./Backend/gradlew build
