--- a/Backend/build.gradle
+++ b/Backend/build.gradle
@@ -1,13 +1,14 @@
 plugins {
+	id 'base'
 	id 'org.springframework.boot' version '2.2.6.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
-	id 'base'
+	id 'application'
 }
 
 group = 'Digitact'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = '1.8'
 
 repositories {
 	mavenCentral()
