--- a/Backend/build.gradle
+++ b/Backend/build.gradle
@@ -3,7 +3,7 @@ plugins {
 	id 'org.springframework.boot' version '2.2.6.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
-//	id 'application'
+	id 'application'
 }
 
 group = 'Digitact'
