--- a/.github/workflows/backend-gradle.yml
+++ b/.github/workflows/backend-gradle.yml
@@ -25,7 +25,7 @@ jobs:
         java-version: 1.8
     - name: Grant execute permission for gradlew
       run: chmod +x  ./Backend/gradlew
-#    - name: Clean //commented for issue - Backend fix CI
-#      run: ./Backend/gradlew clean
     - name: Build with Gradle
       run: ./Backend/gradlew build
+    - name: Test //commented for issue - Backend fix CI
+      run: ./Backend/gradlew test
