erase App.properties

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-server.port=9090
-spring.jpa.database=POSTGRESQL
-spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+server.port=XX
+spring.jpa.database=XX
+spring.datasource.platform=XX
+spring.datasource.url=XX
+spring.datasource.username=XX
+spring.datasource.password=XX
+spring.jpa.show-sql=XX
+spring.jpa.generate-ddl=XX
+spring.jpa.hibernate.ddl-auto=XX
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=XX
