--- a/.github/workflows/backend-gradle.yml
+++ b/.github/workflows/backend-gradle.yml
@@ -25,5 +25,7 @@ jobs:
         java-version: 1.8
     - name: Grant execute permission for gradlew
       run: chmod +x  ./Backend/gradlew
+    - name: check
+      run: ./Backend/gradlew check
     - name: Build with Gradle
       run: ./Backend/gradlew build
