--- a/Backend/build.gradle
+++ b/Backend/build.gradle
@@ -13,6 +13,8 @@ repositories {
 }
 
 dependencies {
+    compile 'com.google.googlejavaformat:google-java-format:1.6'
+    compile('org.springframework.boot:spring-boot-starter-web')
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	runtimeOnly 'org.postgresql:postgresql'
