--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "@ionic-native/splash-screen": "^5.24.0",
     "@ionic-native/status-bar": "^5.24.0",
     "@ionic/angular": "^5.1.0",
+    "@ionic/pwa-elements": "^1.5.2",
     "@ionic/storage": "^2.2.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
