--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
     "@capacitor/core": "2.2.0",
+    "@capacitor/ios": "^2.2.0",
     "@ionic-native/core": "^5.26.0",
     "@ionic-native/splash-screen": "^5.26.0",
     "@ionic-native/status-bar": "^5.26.0",
