--- a/frontend/capacitor.config.json
+++ b/frontend/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "io.ionic.starter",
+  "appId": "de.consileon.digitact",
   "appName": "digitact",
   "bundledWebRuntime": false,
   "npmClient": "npm",
