--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -28,3 +28,11 @@ npm-debug.log*
 /platforms
 /plugins
 /www
+
+
+resources/android/icon
+resources/android/splash
+resources/ios/icon
+resources/ios/splash
+resources/windows/icon
+resources/windows/splash
