--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "@capacitor/android": "^2.2.0",
     "@capacitor/core": "2.2.0",
     "@capacitor/ios": "^2.2.0",
     "@ionic-native/core": "^5.26.0",
