--- a/Backend/build.gradle
+++ b/Backend/build.gradle
@@ -15,6 +15,7 @@ repositories {
 dependencies {
     compile 'com.google.googlejavaformat:google-java-format:1.6'
     compile('org.springframework.boot:spring-boot-starter-web')
+    compile("com.auth0:java-jwt:3.4.0")
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     runtimeOnly 'org.postgresql:postgresql'
