--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -6,10 +6,10 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true 
-#server.ssl.key-store-type=PKCS12
-#server.ssl.key-store=classpath:keystore.p12
-#server.ssl.key-store-password=password
-#server.ssl.key-alias=tomcat
-#security.require-ssl=true
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=password
+server.ssl.key-alias=tomcat
+security.require-ssl=true
